<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Home Air Monitor</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_details">Sensor Details</string>
    <string name="title_activity_edit">Edit Page</string>
    <string name="current_sensors">Current Sensors:</string>
    <string name="first_sensor_label">Furnace Sensor</string>
    <string name="first_sensor_details">Furnace Sensor Details</string>
    <string name="edit_content">Edit This</string>
    <string name="details">Details</string>
    <string name="status">Status</string>
    <string name="particle_count">Particle Count: </string>
    <string name="sample_area">Sample Area: </string>
    <string name="edit_fields">Click to edit fields: </string>
    <string name="sensor_name">Name of Sensor </string>
    <string name="area_size">Size of area to monitor </string>
    <string name="changed">Changed </string>
    <string name="ignored">Ignored</string>

</resources>