<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.cleanspace.DetailsActivity" >

    <TextView
        android:id="@+id/sensor_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Furnace Filter Sensor"
        android:textColor="#16b116"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/particle_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button1"
        android:layout_below="@+id/details_title"
        android:layout_marginTop="49dp"
        android:text="@string/particle_count" />

    <TextView
        android:id="@+id/details_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button1"
        android:layout_below="@+id/status"
        android:layout_marginTop="49dp"
        android:text="@string/details"
        android:textColor="#16b116"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/sample_area"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/particle_count"
        android:text="@string/sample_area" />

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/sensor_title"
        android:layout_below="@+id/sensor_title"
        android:layout_marginTop="90dp"
        android:text="@string/status" />

    <Button
        android:id="@+id/TCPTestButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/details_title"
        android:layout_alignBottom="@+id/details_title"
        android:layout_toLeftOf="@+id/status"
        android:onClick="getValue"
        android:text="Test" />

    <TextView
        android:id="@+id/testTCPtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TCPTestButton"
        android:layout_marginTop="14dp"
        android:layout_toLeftOf="@+id/status"
        android:text="Testing" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/sample_area"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="16dp"
        android:onClick="openEditActivity"
        android:text="@string/edit_content" />

</RelativeLayout>